--- a/dom/tests/mochitest/fetch/mochitest.ini
+++ b/dom/tests/mochitest/fetch/mochitest.ini
@@ -44,11 +44,11 @@ support-files =
 [test_fetch_basic_http_sw_reroute.html]
 [test_fetch_basic_http_sw_empty_reroute.html]
 [test_fetch_cors.html]
-skip-if = toolkit == 'android' && debug # Bug 1210282
+skip-if = toolkit == 'android' # Bug 1210282
 [test_fetch_cors_sw_reroute.html]
-skip-if = toolkit == 'android' && debug # Bug 1210282
+skip-if = toolkit == 'android' # Bug 1210282
 [test_fetch_cors_sw_empty_reroute.html]
-skip-if = toolkit == 'android' && debug # Bug 1210282
+skip-if = toolkit == 'android' # Bug 1210282
 [test_fetch_user_control_rp.html]
 [test_formdataparsing.html]
 [test_formdataparsing_sw_reroute.html]
