Simplified some codes.

--- a/old-configure.in
+++ b/old-configure.in
@@ -3497,8 +3497,8 @@ if test -n "$MOZ_CRASHREPORTER"; then
 
   if test "$OS_ARCH" = "WINNT"; then
     if test -z "$HAVE_64BIT_BUILD" -a -n "$COMPILE_ENVIRONMENT"; then
-      MOZ_CRASHREPORTER_INJECTOR=1
-      AC_DEFINE(MOZ_CRASHREPORTER_INJECTOR)
+      MOZ_CRASHREPORTER_INJECTOR=
+      dnl AC_DEFINE(MOZ_CRASHREPORTER_INJECTOR)
     fi
   fi
 fi
